fix spacing intro

--- a/src/contact/Contact.css
+++ b/src/contact/Contact.css
@@ -9,7 +9,7 @@
 .contactHeading {
     font-size: 4rem;
     color: var(--contrast);
-    padding: 25vh 0 5vh 0;
+    padding: 15vh 0 5vh 0;
 }
 
 .contactButtonContainer {
