--- a/src/home/DateBubble.css
+++ b/src/home/DateBubble.css
@@ -5,10 +5,11 @@
     width: 6.3rem;
     height: 6.3rem;
     /*padding: 1.2rem 0 1.2rem 0;*/
-    background-color: var(--primary-light);
+    background-color: var(--contrast);
     text-align: center;
     display: flex;
     display: -webkit-flex;
+    color: var(--primary-dark);
 }
 
 .dateBubble p {
@@ -21,7 +22,6 @@
         width: 2.6rem;
         height: 2.6rem;
         /*padding: 1.2rem 0 1.2rem 0;*/
-        background-color: var(--primary-light);
         text-align: center;
         display: flex;
         display: -webkit-flex;
